<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:padding="@dimen/x50"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
<ImageView
    android:layout_marginTop="@dimen/y100"
    android:src="@drawable/authorization"
    android:layout_width="@dimen/x400"
    android:layout_height="@dimen/x400"/>
    <TextView
        android:layout_marginTop="@dimen/y100"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/x50"
        android:text="@string/request_authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="@dimen/y300"
        android:text="@string/intrusion_monitoring_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_authorization"
        android:textSize="@dimen/x50"
        android:text="@string/start_authorization"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg"
        android:layout_marginTop="@dimen/y300"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>