<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_delete_item"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="@dimen/y50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x30"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginTop="@dimen/y10"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginTop="@dimen/y50"
        android:background="@color/textColorHint" />

    <Button
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/delete_all"
        android:textColor="@android:color/holo_red_light" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/textColorHint" />

    <Button
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_blue"
        android:textStyle="bold" />
</LinearLayout>