<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/y800"
              android:background="@android:color/white"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:background="@android:color/white"
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y500"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/addNoteBG"/>

    <TextView
        android:textSize="@dimen/x50"
        android:gravity="center"
        android:id="@+id/tv_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y20"
        android:layout_marginTop="@dimen/y20"
        android:text="@string/album"
        android:textColor="@color/blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginEnd="@dimen/x50"
        android:layout_marginStart="@dimen/x50"
        android:background="@color/addNoteBG"/>

    <TextView
        android:textSize="@dimen/x50"
        android:gravity="center"
        android:id="@+id/tv_take_pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y20"
        android:layout_marginTop="@dimen/y20"
        android:text="@string/take_pictures"
        android:textColor="@color/blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginEnd="@dimen/x50"
        android:layout_marginStart="@dimen/x50"
        android:background="@color/addNoteBG"/>

    <TextView
        android:textSize="@dimen/x50"
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y20"
        android:layout_marginTop="@dimen/y20"
        android:text="@string/cancel"
        android:textColor="@color/blue"/>
</LinearLayout>