<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_account"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:scaleType="centerInside"
                android:layout_margin="@dimen/title_icon_margin"
                android:id="@+id/iv_add_account"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:src="@mipmap/ic_add_type_done"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/y100"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@android:color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/x50"
            android:paddingStart="@dimen/x50">

            <ImageView
                android:id="@+id/iv_type_icon"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_width"/>

            <TextView
                android:id="@+id/tv_type_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x20"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/x50">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_title"
                style="@style/TextInputEditStyle"
                android:hint="@string/account_title"
                android:maxLength="15"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/y50">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_name"
                style="@style/TextInputEditStyle"
                android:hint="@string/account_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/y5"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_password"
                style="@style/TextInputEditStyle"
                android:hint="@string/account_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginTop="@dimen/y50"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x50"
                android:text="@string/account_notes"/>

            <TextView
                android:id="@+id/tv_notes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/x50"
                android:layout_marginStart="@dimen/x50"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary"/>

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_width"
                android:layout_marginEnd="@dimen/x70"
                android:src="@mipmap/ic_camera"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>